--- a/error-pages/error.html
+++ b/error-pages/error.html
@@ -21,6 +21,7 @@
                 max-width:400px;
                 width:100%;
                 box-sizing:border-box;
+                background: white;
             }
 
             h1 {
